--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,48 @@
  *	Author: Giovanna Gonçalves Cutieri
  */
 
+ body{
+ 	background: #fafafa;
+ }
+
  .dino{
  	width: 60px;
  	height: 60px;
- 	background: url('dino.png');
+ 	background-image: url(dino.png);
  	position: absolute;
  	bottom: 0;
+ }
+
+ .cactus{
+ 	position: absolute;
+ 	width: 60px;
+ 	height: 60px;
+ 	bottom: 0;
+ 	background-image: url(cactus.png);
+ }
+
+ .game-over{
+ 	text-align: center;
+ 	color: #66666f;
+ 	margin-top: 50px;
+ 	font-family: arial;
+ }
+
+ @keyframes slideright{
+ 	from{
+ 		background-position: 70000%;
+ 	}
+ 	to{
+ 		background-position: 0;
+ 	}
+ }
+
+ .background{
+ 	position: absolute;
+ 	bottom: 0;
+ 	background-image: url(background.png);
+ 	background-repeat: repeat-x;
+ 	animation: slideright 600s infinite linear;
+ 	width: 100%;
+ 	height: 200px;
  }
